fixed spacing of items on options menu

--- a/app/features/optionMenu/OptionMenu.scss
+++ b/app/features/optionMenu/OptionMenu.scss
@@ -48,7 +48,7 @@
 
   &__group {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
   }
 
   &__row {
